<resources>
    <string name="app_name">HelloWorld</string>
    <string name="calculate">Calculate</string>
    <string name="welcome_inform_use_and_term">By Continuing, you accept the Term of Use and Privacy Policy</string>
    <string name="welcome_skip">Skip</string>
    <string name="welcome_line1">Welcome to Clipzy</string>
    <string name="welcome_line2">Clip anything from over</string>
    <string name="welcome_line3">100,000 hot topics</string>
    <string name="welcome_get_started">Get Started</string>

    <string name="button">Button</string>
    <string name="ok">OK</string>
</resources>
