<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <ImageView
        android:layout_width="@dimen/welcome_logo"
        android:layout_height="@dimen/welcome_logo"
        android:src="@drawable/logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:text="@string/welcome_line1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:text="@string/welcome_line2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:text="@string/welcome_line3" />
    </LinearLayout>

    <Button
        android:layout_above="@+id/tvSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/welcome_button_padding"
        android:text="@string/welcome_get_started"
        android:layout_centerInParent="true"
        android:textColor="@color/colorBtnGetStarted"
        android:textSize="13sp"
        android:background="@color/colorBtnWelcomeNormal"/>

    <TextView
        android:id="@id/tvSkip"
        android:layout_above="@+id/tvTerm"
        android:paddingTop="@dimen/welcome_skip_padding_top"
        android:paddingBottom="@dimen/welcome_skip_padding_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/welcome_skip"
        android:textSize="14sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@id/tvTerm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/welcome_inform_use_and_term"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textAlignment="center"
        android:paddingBottom="@dimen/welcome_botton"/>
</RelativeLayout>